<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bestOnScreenApp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myToWatchListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/to_watch_list"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        bestOnScreenApp:layout_constraintBottom_toTopOf="@+id/textView4"
        bestOnScreenApp:layout_constraintEnd_toEndOf="@+id/textView4"
        bestOnScreenApp:layout_constraintStart_toStartOf="@+id/textView4"
        bestOnScreenApp:layout_constraintTop_toTopOf="parent"
        bestOnScreenApp:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/topRatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_rated"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="21sp"
        bestOnScreenApp:layout_constraintBottom_toBottomOf="parent"
        bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
        bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
        bestOnScreenApp:layout_constraintStart_toStartOf="parent"
        bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/popularTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/choose_category_header"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        bestOnScreenApp:layout_constraintBottom_toTopOf="@+id/upcomingTextView"
        bestOnScreenApp:layout_constraintEnd_toEndOf="@+id/upcomingTextView"
        bestOnScreenApp:layout_constraintStart_toStartOf="@+id/upcomingTextView"
        bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/myToWatchListTextView" />

    <TextView
        android:id="@+id/upcomingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/upcoming"
        android:textColor="@android:color/holo_purple"
        android:textSize="21sp"
        bestOnScreenApp:layout_constraintBottom_toTopOf="@+id/popularTextView"
        bestOnScreenApp:layout_constraintEnd_toEndOf="@+id/popularTextView"
        bestOnScreenApp:layout_constraintStart_toStartOf="@+id/popularTextView"
        bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/popularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/popular"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="21sp"
        bestOnScreenApp:layout_constraintBottom_toTopOf="@+id/topRatedTextView"
        bestOnScreenApp:layout_constraintEnd_toEndOf="@+id/topRatedTextView"
        bestOnScreenApp:layout_constraintStart_toStartOf="@+id/topRatedTextView"
        bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/upcomingTextView" />

    <View
        android:id="@+id/divider"
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="21dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        bestOnScreenApp:layout_constraintBottom_toTopOf="@+id/textView4"
        bestOnScreenApp:layout_constraintEnd_toEndOf="@+id/myToWatchListTextView"
        bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
        bestOnScreenApp:layout_constraintStart_toStartOf="@+id/myToWatchListTextView"
        bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/myToWatchListTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>