<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apiFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ApiFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewApi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topRatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_rated"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@+id/popularTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upcomingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming"
        android:textColor="@android:color/holo_purple"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/popularTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/popularTextView"
        app:layout_constraintTop_toTopOf="@+id/popularTextView" />

    <TextView
        android:id="@+id/popularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/popular"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/topRatedTextView"
        app:layout_constraintEnd_toStartOf="@+id/upcomingTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/topRatedTextView"
        app:layout_constraintTop_toTopOf="@+id/topRatedTextView" />

    <ProgressBar
        android:id="@+id/progressBarApi"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>