<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bestOnScreenApp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
        bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
        bestOnScreenApp:layout_constraintStart_toStartOf="parent"
        bestOnScreenApp:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bestOnScreenApp:layout_constraintBottom_toBottomOf="parent"
            bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
            bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
            bestOnScreenApp:layout_constraintStart_toStartOf="parent"
            bestOnScreenApp:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="50dp">

            <ImageView
                android:id="@+id/posterImageViewDetails"
                android:layout_width="250dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:scaleType="fitCenter"
                bestOnScreenApp:layout_constraintDimensionRatio="1:1.5"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
                bestOnScreenApp:layout_constraintStart_toStartOf="parent"
                bestOnScreenApp:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/poster_example"
                android:contentDescription="@string/movie_image" />

            <TextView
                android:id="@+id/rateTextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                bestOnScreenApp:layout_constraintEnd_toStartOf="@+id/releaseDateTextViewDetails"
                bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
                bestOnScreenApp:layout_constraintHorizontal_chainStyle="spread_inside"
                bestOnScreenApp:layout_constraintStart_toStartOf="parent"
                bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/titleTextViewDetails"
                tools:text="Rate: " />

            <TextView
                android:id="@+id/releaseDateTextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                bestOnScreenApp:layout_constraintBottom_toBottomOf="@+id/rateTextViewDetails"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintHorizontal_bias="0.5"
                bestOnScreenApp:layout_constraintStart_toEndOf="@+id/rateTextViewDetails"
                bestOnScreenApp:layout_constraintTop_toTopOf="@+id/rateTextViewDetails"
                tools:text="Release date: " />

            <TextView
                android:id="@+id/genresTextViewDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintStart_toStartOf="parent"
                bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/addToListBtn"
                tools:text="Genres: " />

            <TextView
                android:id="@+id/overviewTextViewDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                bestOnScreenApp:layout_constraintBottom_toBottomOf="parent"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintStart_toStartOf="parent"
                bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/genresTextViewDetails"
                tools:text="overview... " />

            <TextView
                android:id="@+id/titleTextViewDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintStart_toStartOf="parent"
                bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/posterImageViewDetails"
                tools:text="title..." />


            <ToggleButton
                android:id="@+id/addToListBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/add_to_list_toggle"
                android:checked="false"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@android:color/white"
                android:textOff="@string/add_to_my_list"
                android:textOn="@string/remove_from_my_list"
                bestOnScreenApp:layout_constraintEnd_toEndOf="parent"
                bestOnScreenApp:layout_constraintTop_toBottomOf="@+id/releaseDateTextViewDetails" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

